fix: add again overflow, previous bug was due to firefox

--- a/front-end/source/assets/style/layout/_aside.scss
+++ b/front-end/source/assets/style/layout/_aside.scss
@@ -27,6 +27,7 @@ aside {
   align-items: center;
   gap: $aside-panel-gap;
   flex-shrink: 0;
+  overflow: visible;
   transition: var(--default-transition);
 
   > * {
